welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: not found: value taling
  if ((hour<7 && taling==true || hour>20 && talking ==true)){
                 ^